# AC-Linux-External

./: .gitignore  CMakeLists.txt  LICENSE  Offsets.h  README.md  SettingFunction.h  kernel.cpp  kernel.h  main.cpp  math.cpp  math.h  memory.cpp  memory.h  processmanager.cpp  processmanager.h  render.cpp
features/: antiknockback.cpp  antiknockback.h  godmode.cpp  godmode.h  infinityammo.cpp  infinityammo.h  infinityarmor.cpp  infinityarmor.h  modifier.h  norecoil.cpp  norecoil.h  processmanager.cpp  processmanager.h  rapidfire.cpp  rapidfire.h  spread.cpp  spread.h  weaponid.cpp  weaponid.h
memory/: memory.cpp  memory.h  processmanager.cpp
sdk/: Entity.cpp  Entity.h  LocalPlayer.cpp  localPlayer.h  weapon.cpp  weapon.h
